# C-Chess

./: .gitignore  CMakeLists.txt
src/: app.cpp  app.hpp  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  engine.cpp  engine.hpp  main.cpp  moveGen.cpp  moveGen.hpp  pieceSet.cpp  pieceSet.hpp  position.cpp  position.hpp  types.hpp  utilities.hpp
